tests/ecc-gcp-271-network_configured_with_default_deny_egress_rule/placebo-green/get-compute-v1-projects-cloud-custodian-global-networks-network-271-green-getEffectiveFirewalls_4.json
{
  "headers": {
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Mon, 16 Jan 2023 11:01:24 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "830",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/network-271-green/getEffectiveFirewalls?alt=json"
  },
  "body": {
    "firewalls": [
      {
        "kind": "compute#firewall",
        "id": "813356690373646296",
        "creationTimestamp": "2023-01-16T02:38:47.828-08:00",
        "name": "firewall-271-green",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/network-271-green",
        "priority": 65535,
        "sourceRanges": [
          "0.0.0.0/0"
        ],
        "destinationRanges": [
          "0.0.0.0/0"
        ],
        "denied": [
          {
            "IPProtocol": "all"
          }
        ],
        "direction": "EGRESS",
        "logConfig": {
          "enable": true,
          "metadata": "INCLUDE_ALL_METADATA"
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/firewall-271-green"
      }
    ]
  }
}
